<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black7F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createListTextField"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/add_purchase_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createListText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/create_list_hint"
            android:textSize="24sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createListButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/create_button_dynamic_style"
        android:text="@string/create"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createListTextField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelListCreationButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/create_button_dynamic_style"
        android:text="@string/cancel"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createListTextField" />

</androidx.constraintlayout.widget.ConstraintLayout>