<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <View
        android:id="@+id/dividerViewPurchase"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="90dp"
        android:background="@color/blackBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToListButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/get_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/constPurchButton"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:text="@string/const_purch"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerViewPurchase" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allPurchButton"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:text="@string/all_purch"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="normal"
        android:textColor="@color/black7F"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerViewPurchase" />

    <View
        android:id="@+id/inConstPurchView"
        android:layout_width="270dp"
        android:layout_height="10dp"
        android:layout_marginTop="180dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/outConstPurchView"
        android:layout_width="270dp"
        android:layout_height="10dp"
        android:layout_marginTop="180dp"
        android:background="@color/blackBF"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/inAllPurchView"
        android:layout_width="270dp"
        android:layout_height="10dp"
        android:layout_marginTop="180dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/inConstPurchView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/outAllPurchView"
        android:layout_width="270dp"
        android:layout_height="10dp"
        android:layout_marginTop="180dp"
        android:background="@color/blackBF"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/inConstPurchView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dividerHorizontalViewPurchase"
        android:layout_width="5dp"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:background="@color/blackBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addPurchaseTextField"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/add_purchase_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addPurchaseText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/purchase_hint"
            android:textStyle="italic"
            android:textSize="24sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCompletelyNewPurchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/addPurchaseTextField"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>